sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:24: error: not found: value trouBase
  if (getTrouPosition()==0){deplace(trouBase,1)}
                                    ^